# many-body-dynamics

./: .clang-tidy  .clangd  .cmake-format.yaml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: Dependencies.cmake
src/: CMakeLists.txt  calculator.cpp  calculator.h  hamiltonian.cpp  hamiltonian.h  main.cpp  pauli.cpp  pauli.h
